--- a/M1/index.html
+++ b/M1/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
+
     <meta charset="UTF-8">
     <title>Questa è il mio primo esercizio</title>
+    <link rel="stylesheet" href="./styles.css">
+
 </head>
 <body>
+    <nav class="navigation-conteiner">
+        <div class="navigation-title">
+            Contenitore 1
+        </div>
+        <div class="navigation-link">
+            Contenitore 2
+        </div>
+
+    </nav>
     
 </body>
 </html>
