--- a/M1/index.html
+++ b/M1/index.html
@@ -40,7 +40,36 @@
         <div class="Ingredients">
             <h2>Ingredients</h2>
             <hr>
-            <h3 class="h3-title">For the focaccia</h3>
+            <h3>For the focaccia:</h3>
+
+            <ul>
+                <li>4 cups (500g) all-purpose flour</li>
+                <li>11/2 teaspoons instant yeast</li>
+                <li>11/2 teaspoons salt</li>
+                <li>13/4 (350g) lukawarm water</li>
+                <li>1/4 cup extra olive oil, plus more for the pan</li>
+            </ul>
+
+            <h3>For the topping:</h3>
+
+            <ul>
+                <li>3 medium yellow onions, thinly sliced</li>
+                <li>1 tablespoon balsamic vinegar</li>
+                <li>1-2 tablespoons olive oil, for brushing on top</li>
+                <li>10 ounces brie, cut into cubes (scrape rind off with a paring knife if desired, though it's not necessary)</li>
+                <li>11/2 cups fresh or frozen cranberries</li>
+            </ul>
+
+            <h2>Method</h2>
+            <hr>
+            <ol>
+            <li><h2>Make the focaccia dough</h2></li>
+            </ol>
+
+            <p class="p1">In a medium-size mixing bowl, or in a stand mixer with a paddle attachment, mix together all the dough ingredients until the flour is fully absorbed. You don't need actually knead the dough, though I something knead it a few times in the bowl when mixing by hand to incorporate the last of the flour...</p>
+
+            <p class="p2">Read more on <a href="#">Simply recipes</a></p>
+
         </div>
         </div>
 
